@@ -131,7 +131,7 @@ public class DatabaseUpgrades {
 			DatabaseConnection.executeUpdate(sql, conn);
 			messages.add("Dropped column file_deleted from table jam_file");
 			// make user login constraint "lower(login)"
-			if (!Environment.getValue(Environment.PROP_DB_TYPE).equals("mysql")) {
+			if (!Environment.getValue(Environment.PROP_DB_TYPE).equals(DatabaseHandler.DB_TYPE_MYSQL)) {
 				sql = "alter table jam_wiki_user drop constraint jam_unique_wiki_user_login ";
 			} else {
 				sql = "alter table jam_wiki_user drop index jam_unique_wiki_user_login ";
